--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -1,20 +1,68 @@
+h1 {
+    padding:none;
+    margin:none;
+}
+
+#container {
+    width:1200px;
+    height:800px;
+    margin:0 auto;
+}
+
+#notice {
+    font-family:Arial, Helvetica, sans-serif;
+    text-align:center;
+}
+
 th {
     padding-left: 10px;
     padding-right: 10px;
 }
+
 td {
     padding-left:10px;
     padding-right:10px;
+    padding:10px;
 }
-table {
-    background-color:grey;
+
+tr:nth-child(odd){
+    background-color: #afd5ff;
+    color: #4b4b4b;
+  }
+
+.table {
+    width:1000px;
+    height:400px;
+    margin:0 auto;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:18px;
+    color:#4b4b4b;
 }
+
 a.crud {
-    background-color:#59acfd;
-    color:white;
+    color:greenyellow;
     border-radius:10px;
     padding:5px;
     text-decoration:none;
     margin-left:10px;
     margin-right:10px;
+    font-size:10px;
+}
+
+input {
+    width:20%;
+    border-radius:10px;
+    padding:10px;
+    -webkit-appearance: none; 
+    -moz-appearance: none
+    border-style:solid;
+    margin:25px;
+}
+
+select {
+    background-color:white;
+    color: black;
+    padding:10px;
+    font-size:15px;
+    margin:25px;
 }
