--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -39,3 +39,5 @@
 
 <%= link_to 'New Order', new_order_path %>
 <%= link_to 'Vendors', vendors_path %>
+<%= link_to 'Libraries', libraries_path %>
+<%= link_to 'Products', products_path %>
