minor changes to controllers and views

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -40,7 +40,7 @@ tr:nth-child(odd){
 }
 
 a.crud {
-    color:greenyellow;
+    color:black;
     border-radius:10px;
     padding:5px;
     text-decoration:none;
