--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,7 +3,7 @@
         <%= f.label :product_name, "Product Name" %>
         <%= f.text_field :product_name%><br>
         <%= f.label :product_price, "Product Price" %>
-        <%= f.text_field :product_price%><br>
+        <%= f.text_field :price, :step => 0.5 %><br>
     </p>
     <p>
         <%= f.submit 'Submit' %>
