--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -54,7 +54,7 @@ input {
     border-radius:10px;
     padding:10px;
     -webkit-appearance: none; 
-    -moz-appearance: none
+    -moz-appearance: none;
     border-style:solid;
     margin:25px;
 }
