--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -37,7 +37,7 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
-<%= link_to 'Vendors', vendors_path %>
-<%= link_to 'Libraries', libraries_path %>
-<%= link_to 'Products', products_path %>
+<%= link_to '+ New Order', new_order_path, :class => 'new' %>
+<%= link_to 'Manage Vendors', vendors_path, :class => 'button' %>
+<%= link_to 'Manage Libraries', libraries_path, :class => 'button'%>
+<%= link_to 'Manage Products', products_path, :class => 'button' %>
