--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -49,6 +49,34 @@ a.crud {
     font-size:10px;
 }
 
+a.new {
+    background-color: #4485f4;
+    border-radius:10px;
+    color:white;
+    padding:5px;
+    text-decoration:none;
+    margin-left:10px;
+    margin-right:10px;
+    font-size:15px;
+    position:absolute;
+    top:0;
+    right:0;
+    margin-right:25%;
+    margin-top:3%;
+}
+
+a.button {
+background-color: #e86240;
+border-radius:10px;
+color:white;
+padding:5px;
+text-decoration:none;
+margin-left:10px;
+margin-right:10px;
+font-size:15px;
+margin-top:100px;
+}
+
 input {
     width:20%;
     border-radius:10px;
