--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -11,12 +11,13 @@
       <% @libraries.each do |library| %>
           <tr>
             <td><%= library.library_name %>
-            <td><%= link_to 'Edit', edit_library_path(library) %></td>
-            <td><%= link_to 'Destroy', library_path(library), method: :delete, data: { confirm: 'Are you sure?' }, class: 'crud' %></td>
+            <td><%= link_to 'Edit', edit_library_path(library), class: 'crud' %></td>
+            <td><%= link_to 'Delete', library_path(library), method: :delete, data: { confirm: 'Are you sure?' }, class: 'crud' %></td>
           <% end %>
           </tr>
       </tbody>
     </table>
-    <%= link_to 'New', new_library_path, class: 'crud' %>
+    <%= link_to '+ Add Library', new_library_path, class: 'new' %>
     <br>
+    <%= link_to 'Back to Orders', orders_path, class: 'button' %>
 </div></div>
