--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
-<div class="table">
-<h1>Record a New Order</h1>
+<div id="orders-container">
+<h1>Create a New Order</h1>
 
 <%= render partial: 'form' %>
 </div>
