--- a/app/views/libraries/_form.html.erb
+++ b/app/views/libraries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @library,  local: true) do |f| %>
+<div id="orders-container"><%= form_with(model: @library,  local: true) do |f| %>
     <p>
         <%= f.label :library_name, "Library Name" %><br />
         <%= f.text_field :library_name%>
@@ -7,3 +7,4 @@
         <%= f.submit 'Submit' %>
     </p>
 <% end %>
+</div>
