--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,16 +1,30 @@
 <p id="notice"><%= notice %></p>
 
-<div id="container">
+<div id="orders-container">
   <div class="table">
     <h1>Orders</h1>
+   <div id="search-bar">
+<%= form_tag(orders_path, method: :get) do %>
+  <p>
+    <%= text_field_tag :search, nil, placeholder: 'Search by Service Tag' %>
+    <%= submit_tag "Search" %>
+  </p>
+<% end %>
+</div>
+
+<div id="date-filter">
+  <%= form_tag orders_path, method: :get do %>
+    <div id="date-to"><%= text_field_tag 'search[date_from]', @search.date_from %></div>
+   <div id="date-from"> <%= text_field_tag 'search[date_to]', @search.date_to %></div>
+    <%= submit_tag 'Search Date Range', class: 'btn search-button' %>
+  <% end %>
 
       <table>
         <thead>
           <tr>
             <th>Date</th>
             <th>Library</th>
-            <th>Product</th>
-            <th>Price</th>
+            <th>Product/Price</th>
             <th>Serial</th>
             <th>Vendor</th>
             <th>Purchase Order</th>
@@ -24,7 +38,6 @@
               <td><%= order.date %></td>
               <td><%= order.library %></td>
               <td><%= order.product %></td>
-              <td><%= order.price %></td>
               <td><%= order.serial_no %></td>
               <td><%= order.vendor %></td>
               <td><%= order.po_no %></td>
@@ -36,8 +49,3 @@
       </table>
 
 <br>
-
-<%= link_to '+ New Order', new_order_path, :class => 'new' %>
-<%= link_to 'Manage Vendors', vendors_path, :class => 'button' %>
-<%= link_to 'Manage Libraries', libraries_path, :class => 'button'%>
-<%= link_to 'Manage Products', products_path, :class => 'button' %>
