--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,25 +1,20 @@
 <p id="notice"><%= notice %></p>
-<div id="container">
+<div id="orders-container">
   <div class="table">
-    <h1>Products</h1><table>
+    <h1>Products</h1><table><%= link_to '+ Add Product', new_product_path, class: 'new' %>
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Price</th>
+          <th>Product/Price</th>
         </tr>
       </thead>
       <tbody>
       <% @products.each do |product| %>
           <tr>
             <td><%= product.product_name %></td>
-            <td><%= product.price %></td>
             <td><%= link_to 'Edit', edit_product_path(product), class: 'crud' %></td>
             <td><%= link_to 'Delete', product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'crud' %></td>
           <% end %>
           </tr>
       </tbody>
     </table>
-    <%= link_to '+ Add Product', new_product_path, class: 'new' %>
-    <br>
-    <%= link_to 'Back to Orders', orders_path, class: 'button' %>
 </div></div>
