--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -18,7 +18,7 @@ body {
     border-top:none;
     border-left:none;
     border-right:none;
-    width:45%;
+    width:500px;
     height:45px;
     font-size:25px;
     font-family:inherit;
