added logo to sidebar

--- a/app/views/layouts/orders.html.erb
+++ b/app/views/layouts/orders.html.erb
@@ -11,6 +11,7 @@
   <body>
   <div id="left-sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="sidebar-logo"></div>
 <ul>
 <li><%= link_to 'Inventory', orders_path %></li>
 <hr class="sidebar">
