--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -38,7 +38,6 @@ h1 {
     font-size:18px;
     line-height:18px;
     padding:0;
-    padding-top:100px;
 
 }
 
@@ -81,6 +80,13 @@ hr.sidebar {
     border:none;
     width:55px;
     display:block;
+}
+
+.sidebar-logo {
+    content: url('http://i.imgur.com/bvJqZQn.png');
+    width:200px;
+    margin-top:8%;
+    margin-left:25px;
 }
 
 
