--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,22 +2,14 @@
 
 <div id="orders-container">
   <div class="table">
-    <h1>Orders</h1>
-   <div id="search-bar">
-<%= form_tag(orders_path, method: :get) do %>
-  <p>
+   <h1>Orders</h1>
+   <div id="search-svc">
+    <%= form_tag(orders_path, method: :get) do %>
     <%= text_field_tag :search, nil, placeholder: 'Search by Service Tag' %>
     <%= submit_tag "Search" %>
   </p>
 <% end %>
 </div>
-
-<div id="date-filter">
-  <%= form_tag orders_path, method: :get do %>
-    <div id="date-to"><%= text_field_tag 'search[date_from]', @search.date_from %></div>
-   <div id="date-from"> <%= text_field_tag 'search[date_to]', @search.date_to %></div>
-    <%= submit_tag 'Search Date Range', class: 'btn search-button' %>
-  <% end %>
 
       <table>
         <thead>
