--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 <div id="orders-container">
   <div class="table">
-    <h1>Products</h1><table><%= link_to '+ Add Product', new_product_path, class: 'new' %>
+    <h1>Products</h1><br>
+    <table><%= link_to '+ Add Product', new_product_path, class: 'new' %>
       <thead>
         <tr>
           <th>Product/Price</th>
