updated styling on products, libraries, vendors pages

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -188,7 +188,17 @@ td {
 
 .table-grid {
     display:grid;
-    grid-template-columns:100px 200px;
+    grid-template-columns:150px 200px;
+    grid-template-rows:auto;
+    font-family:'Montserrat';
+    font-size:20px;
+    margin-top:5%;
+}
+
+
+.table-grid-products {
+    display:grid;
+    grid-template-columns:350px 200px;
     grid-template-rows:auto;
     font-family:'Montserrat';
     font-size:20px;
