--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,9 +5,13 @@
    <h1 class="title">Orders</h1>
    <div id="search-svc">
     <%= form_tag(orders_path, method: :get) do %>
-    <%= text_field_tag :search, nil, placeholder: 'Search by Service Tag' %>
+    <%= text_field_tag :search, params[:search], placeholder: 'Search by Service Tag' %>
     <%= submit_tag("Go", :style => "height:30px;width:40px;position:relative;top:-40px;left:210px;") %>
-  </p>
+  <% if @orders.present? %>
+  <%=render @orders %>
+  <% else %>
+<p class="no-results">There are no orders containing the term(s) <%= params[:search] %><br><br>
+   <% end %>
 <% end %>
 </div>
 
