--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<div id="orders-container">
+<div id="orders-container" style="position:relative; top:-50px;">
 <%= form_with(model: @product,  local: true) do |f| %>
     <p>
         <%= f.label :product_name, "Product Name/Price" %>
