changed spacing in css

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,3 +1,5 @@
+<div id="orders-container">
+<h1>Create a New Order</h1><br><br>
 <%= form_with(model: @order,  local: true) do |f| %>
     <p>
         <%= f.label :date, "Date: " %>
@@ -17,3 +19,4 @@
         <%= f.submit 'Submit' %>
     </p>
 <% end %>
+</div>
