--- a/app/views/libraries/_form.html.erb
+++ b/app/views/libraries/_form.html.erb
@@ -1,4 +1,5 @@
-<div id="orders-container" style="position:relative; top:-50px;">
+<div id="orders-container">
+<h1>Create a New Library</h1><br><br>
 <%= form_with(model: @library,  local: true) do |f| %>
     <p>
         <%= f.label :library_name, "Library Name" %><br />
