inventory now sorts by purchase order

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,5 +1,5 @@
 <div id="orders-container">
-<h1>Create a New Order</h1><br><br>
+<h1>Create/Edit a New Order</h1><br><br>
 <%= form_with(model: @order,  local: true) do |f| %>
     <p>
         <%= f.label :date, "Date: " %>
