--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <div id="orders-container">
-   <h1 class="title">Orders</h1>
-   <%= link_to '+ Add Order', new_order_path, class: 'new' %><br><br><p>
+   <h1 class="title">Inventory</h1>
+   <%= link_to '+ Add Item', new_order_path, class: 'new' %><br><br><p>
    <div id="search-svc">
     <%= form_tag(orders_path, method: :get) do %>
     <%= text_field_tag :search, params[:search], placeholder: 'Search by Service Tag' %>
@@ -15,7 +15,7 @@
             <th>Date</th>
             <th>Library</th>
             <th>Product</th>
-            <th>Svc Tag</th>
+            <th>Serial #</th>
             <th>Vendor</th>
             <th>Purchase Order</th>
             <th colspan="7"></th>
