--- a/app/views/libraries/_form.html.erb
+++ b/app/views/libraries/_form.html.erb
@@ -4,6 +4,8 @@
     <p>
         <%= f.label :library_name, "Library Name" %><br />
         <%= f.text_field :library_name%>
+        <%= f.label :df_lic, "Total Deep Freeze Licenses" %><br />
+        <%= f.number_field :df_lic%>
     </p>
     <p>
         <%= f.submit 'Submit' %>
