--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -5,7 +5,7 @@
         <%= f.label :date, "Date: " %>
         <%= f.date_field :date %><br>
         <%= f.label :library, "Library: " %>
-        <%= f.select 'library', options_from_collection_for_select(@libraries, :library_name, :library_name) %><br>
+        <%= collection_select(:order, :library_id, Library.all, :id, :name, {}, { :multiple => false } ) %>
         <%= f.label :product, "Product: " %>
         <%= f.select 'product', options_from_collection_for_select(@products, :product_name, :product_name) %><br>
         <%= f.label :serial_no, "Serial Number: " %>
