--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -10,7 +10,7 @@
     
     <% @libraries.each do |library| %>
         <div class="table-grid-libs">
-            <div class="row-name"><%= library.library_name %></div>
+            <div class="row-name"><%= library.name %></div>
             <div class="row-name"><%= library.df_lic %></div>
             <div class="row-links"><%= link_to 'Edit', edit_library_path(library), class: 'crud' %><%= link_to 'Delete', library_path(library), method: :delete, data: { confirm: 'Are you sure?' }, class: 'crud' %></div>
           <% end %>
