--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -26,6 +26,7 @@
           <% @orders.each do |order| %>
             <tr>
               <td><%= order.date %></td>
+              <td><%= order.library.name %></td>
               <td><%= order.product %></td>
               <td><%= order.serial_no %></td>
               <td><%= order.vendor %></td>
