--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -26,8 +26,8 @@
           <% @orders.each do |order| %>
             <tr>
               <td><%= order.date %></td>
-              <td><%= order.library.name %></td>
-              <td><%= order.product %></td>
+              <td><%= order.library.try :name %></td>
+              <td><%= order.product.try :product_name %></td>
               <td><%= order.serial_no %></td>
               <td><%= order.vendor %></td>
               <td><%= order.po_no %></td>
