--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -2,9 +2,13 @@
 <h1>Add a new Product</h1><br><br>
 <%= form_with(model: @product,  local: true) do |f| %>
     <p>
-        <%= f.label :product_name, "Product Name/Price" %>
-        <p><i>ex. Dell Optiplex 3010 - $567.87</i></p>
+        <%= f.label :product_name, "Product Name" %>
+        <p><i>ex. Dell Optiplex 3010</i></p>
         <%= f.text_field :product_name%><br>
+        <%= f.label :price, "Product Price" %>
+        <%= f.number_field :price, step: :any %><br>
+        <%= f.label :vendor, "Vendor: " %>
+        <%= f.select 'vendor', options_from_collection_for_select(@vendors, :vendor_name, :vendor_name) %><br>
     </p>
     <p>
         <%= f.submit 'Submit' %>
