--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -8,7 +8,7 @@
         <%= f.label :price, "Product Price" %>
         <%= f.number_field :price, step: :any %><br>
         <%= f.label :vendor, "Vendor: " %>
-        <%= f.select 'vendor', options_from_collection_for_select(@vendors, :vendor_name, :vendor_name) %><br>
+        <%= collection_select(:order, :vendor_id, Vendor.order('vendor_name ASC').all, :id, :vendor_name, {}, { :multiple => false } ) %>
     </p>
     <p>
         <%= f.submit 'Submit' %>
