--- a/app/views/layouts/orders.html.erb
+++ b/app/views/layouts/orders.html.erb
@@ -11,21 +11,15 @@
 
   <body>
   <div id="left-sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div class="sidebar-logo"></div>
 <ul>
+<li><div class="sidebar-logo"></div></li>
 <li><%= link_to 'Inventory', orders_path %></li>
-<hr class="sidebar">
-<li><%= link_to 'Manage Products', products_path %></li>
-<hr class="sidebar">
-<li><%= link_to 'Manage Libraries', libraries_path %></li>
-<hr class="sidebar">
-<li><%= link_to 'Manage Vendors', vendors_path %></li>
-<hr class="sidebar">
+<li><%= link_to 'Products', products_path %></li>
+<li><%= link_to 'Libraries', libraries_path %></li>
+<li><%= link_to 'Vendors', vendors_path %></li>
 </ul>
 </div>
 
-<button class="openbtn" onclick="openNav()">&#9776;</button>
     <%= yield %>
   </body>
 </html>
