--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -65,6 +65,8 @@ body {
 #notice {
     font-family:Arial, Helvetica, sans-serif;
     text-align:center;
+    padding-top:25px;
+    font-size:14px;
 }
 
 input:-webkit-autofill,
@@ -189,6 +191,8 @@ td {
 
 table {
     white-space:nowrap;
+    table-layout:auto;
+    width:700px;
 }
 
 table td {
@@ -236,7 +240,7 @@ table td {
     height:50px;
     width:200px;
     position:relative;
-    margin-top:50px;
+    margin-top:25px;
 }
 
 #search-svc input input[type=submit] {
