--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,8 +7,8 @@
         <%= f.text_field :product_name%><br>
         <%= f.label :price, "Product Price" %>
         <%= f.number_field :price, step: :any %><br>
-        <%= f.label :vendor, "Vendor: " %>
-        <%= collection_select(:order, :vendor_id, Vendor.order('vendor_name ASC').all, :id, :vendor_name, {}, { :multiple => false } ) %>
+        <%= f.label :vendor, "Vendor " %>
+        <%= collection_select(:product, :vendor_id, Vendor.order('vendor_name ASC').all, :id, :vendor_name, {}, { :multiple => false } ) %>
     </p>
     <p>
         <%= f.submit 'Submit' %>
