--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -21,10 +21,14 @@ body {
 }
 
 #orders-container {
-    margin-left:5%;
-    padding-right:10%;
-    font-family:inherit;
     padding-top:5%;
+    padding-left:5%;
+    padding-right:5%;
+    font-family:inherit;
+    margin:0 auto;
+    display:block;
+    position:relative;
+    width:900px;
 }
 
 /* navigation */
@@ -270,11 +274,4 @@ tr:nth-child(odd){
     font-size:16px;
     position:relative;
     top:-4px;
-}
-
-
-@media only screen and (min-width: 900px) {
-    #orders-container { 
-        width:60%;
-    }
 }
